climweb/src/climweb/config/static/css/cms_style.css
/* ... */
/*1440px and lower*/
@media screen and (max-width: 1440px) {


    h1,
    h1.page-title {
        font-size: 40px
    }

    h2,
    h2.section-title {
        font-size: 32px
    }

    h3 {
        font-size: 24px
    }

    h4,
    h4.subtitle,
    .play {
        font-size: 16px
    }

    h5,
    a.title h5 {
        font-size: 15px;
    }

    h6 {
        font-weight: bold
    }

    h6,
    .views,
    .downloads,
    .date {
        font-size: 13px
    }

    h6,
    .stats {
        font-size: 11px
    }

    body {
        font-size: 13px
    }

    p {
        font-size: 16px;
        line-height: 1.5em
    }

    li {
        font-size: 16px;
    }

    .section-title {
        font-weight: 700;
    }

    section.breadcrumb .breadcrumb {
        font-size: 12px
    }

    .more {
        font-size: 16px
    }


    .hero {
        max-height: 720px
    }

    .hero-body .title {
        width: 46%
    }


    label.nav span {
        font-size: 13px;
        width: 220px;
        padding: 10px 0px
    }


    .intro-image figure {
        height: 400px;
        width: 100%;
        border-radius: var(--border-radius);
    }


    .nmhs-work .sec-btn {
        font-size: 11px;
        min-width: 160px;
        height: 30px
    }


    .box {
        margin-left: 0
    }

    .quote {
        max-width: 45px;
        max-height: 35px
    }
}

/*1366px and lower*/
@media screen and (max-width: 1366px) {


    h3 {
        font-size: 20px
    }

    h4,
    .play {
        font-size: 14px
    }


    .section-title {
        font-size: 26px;
        font-weight: 700;
    }

    .more {
        font-size: 14px
    }


    .hero {
        max-height: 650px
    }

    .hero-body .title {
        width: 46%
    }

    .page-title {
        font-size: 38px
    }


    .checkbox-container h4 {
        font-weight: bold;
        font-size: 15px
    }

    .name {
        font-size: 18px
    }

    .category {
        font-size: 18px
    }

    #updates .card-content {
        min-height: 250px
    }

    #updates .card-content .content {
        font-size: 14px
    }


    h3.accordion-header {
        padding-bottom: 0
    }

    .accordion-body p {
        margin-bottom: 0
    }


}

/*1280px and lower*/
@media screen and (max-width: 1280px) {


    h3 {
        font-size: 20px
    }

    h4,
    h4.title {
        font-size: 14px
    }

    h6,
    .stats,
    .date {
        font-size: 11px;
        font-weight: bold
    }

    p, li {
        font-size: 14px
    }


    .section-title {
        font-size: 28px;
        font-weight: 700;
    }

    .more {
        font-size: 16px
    }

    .sec-btn {
        font-size: 11px;
        min-width: 160px;
        height: 30px
    }


    .hero {
        max-height: 626px
    }

    .hero-body .title {
        width: 47%
    }

    .page-title {
        font-size: 36px
    }

    .checkmark {
        height: 20px;
        width: 20px
    }

    .checkbox-container p {
        font-size: 12px
    }

    .checkbox-container h4 {
        font-size: 15px
    }

    .watch {
        padding: 60px 0px
    }

    .watch .columns:nth-child(2) {
        margin-bottom: 30px !important
    }

    .watch .margin-left {
        margin-left: 100px
    }

    .card-content {
        padding: 1rem
    }
}


/*1024px and lower*/
@media screen and (max-width: 1024px) {

    body {
        font-size: 11px
    }

    h1,
    h1.page-title {
        font-size: 33px
    }

    h2,
    h2.section-title {
        font-size: 20px
    }

    h3 {
        font-size: 22px
    }

    h4,
    h4.subtitle {
        font-size: 18px
    }

    h5,
    .title h5 {
        font-size: 16px
    }

    p, li {
        font-size: 14px
    }

    .section-title {
        font-size: 28px;
        font-weight: 700;
    }

    .column {
        padding: 0.75rem
    }

    .more {
        font-size: 13.5px
    }

    .hero {
        max-height: 542px
    }

    .hero.is-large .hero-body {
        padding-bottom: 15rem;
        padding-top: 11rem
    }

    .hero-body .title {
        width: 50%
    }


    .accordion-body p, .accordion-body li {
        font-size: 14px
    }


    .featured-item-image figure {
        height: 300px;
        width: 100%;
    }


    .share-buttons {
        display: flex;
        justify-content: space-between;
    }
}

/*768px and lower*/
@media screen and (max-width: 768px) {

    h1.page-title {
        padding-bottom: 0 !important;
    }


    section.breadcrumb {
        padding: 12px 0;
    }

    .intro-section-wrapper {
        flex-direction: column;
    }
/* 
    .intro-image {
        display: none;
    } */

    .results-filter {
        border: none;
    }


    .results-view .results-list.grid-view .result-list-item {
        margin: 20px 0;
    }

    .results-view .results-list.list-view .result-list-item-image {
        display: none;
    }


    .featured-item-block {
        padding: 30px 0;
    }

    .featured-item-image figure {
        height: 200px;
        width: 100%;
    }

    .featured-item-detail {
        padding: 0.75rem;
    }

    .featured-item-header .share-buttons .share-button-title {
        display: none;
    }
}


.button {
    border-radius: var(--border-radius) !important;
    height: auto !important;
    white-space: unset !important;
}

.tag {
    border-radius: var(--border-radius) !important
}

